--- a/public/.htaccess
+++ b/public/.htaccess
@@ -18,4 +18,13 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+   
+    <FilesMatch "\.(jpg|jpeg|png|gif|js|css|ico|svg|ttf|woff|woff2|eot)$">
+      Allow from all
+    </FilesMatch>
+    
+</IfModule>
+
+<IfModule mod_headers.c>
+    Header set Access-Control-Allow-Origin "*"
 </IfModule>
